<resources>
    <string name="app_name">Newzy NZ</string>
    <string name="new_zealand_query">\"New Zealand\"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_image">item image</string>
    <string name="navigation_next">navigation next</string>
    <string name="news_of_new_zealand">\"Newzy\" news of New Zealand</string>
    <string name="loading_newzy">Loading Newzy&#8230;</string>
    <string name="date_separator">T</string>
    <string name="settings">Settings</string>
    <string name="empty_string" />
    <string name="contributor">contributor</string>
    <string name="thumbnail">thumbnail</string>
    <string name="choose_your_newzys">Choose your Newzys!</string>

    <!-- Newzy categories. -->
    <string name="newzy">Newzy</string>
    <string name="books">Books</string>
    <string name="film">Film</string>
    <string name="music">Music</string>
    <string name="sport">Sport</string>
    <string name="travel">Travel</string>

    <!-- Empty list view notification strings. -->
    <string name="no_internet">No internet available.\nPlease check connectivity and try again.</string>
    <string name="no_newzys">No Newzys to display.\nPlease adjust your settings or select another Newzy category.</string>

    <!-- Search request URL. -->
    <string name="default_request_url"><![CDATA[https://content.guardianapis.com/search?]]></string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_sort_newzys_by_label">Sort Newzys By:</string>
    <string name="settings_sort_newzys_by_key" translatable="false">order-by</string>
    <string name="settings_sort_newzys_by_default" translatable="false">@string/settings_sort_newzys_by_newest_value</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_sort_newzys_by_newest_label">Newest</string>
    <string name="settings_sort_newzys_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_sort_newzys_by_oldest_label">Oldest</string>
    <string name="settings_sort_newzys_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_sort_newzys_by_relevance_label">Relevance</string>
    <string name="settings_sort_newzys_by_relevance_value" translatable="false">relevance</string>

    <!-- Strings For Newzys To Retrieve Preference [CHAR LIMIT=30] -->
    <string name="settings_newzys_to_retrieve_label">Newzys To Retrieve:</string>
    <string name="settings_newzys_to_retrieve_key" translatable="false">page-size</string>
    <string name="settings_newzys_to_retrieve_default" translatable="false">@string/settings_10_newzys_value</string>

    <!-- Label for 10 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_10_newzys_label">10</string>
    <string name="settings_10_newzys_value" translatable="false">10</string>

    <!-- Label for 20 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_20_newzys_label">20</string>
    <string name="settings_20_newzys_value" translatable="false">20</string>

    <!-- Label for 50 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_50_newzys_label">50</string>
    <string name="settings_50_newzys_value" translatable="false">50</string>

    <!-- Label for 100 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_100_newzys_label">100</string>
    <string name="settings_100_newzys_value" translatable="false">100</string>

    <!-- Strings For Newzys From Date Preference [CHAR LIMIT=30] -->
    <string name="settings_newzys_from_date_label">From Date: (optional)</string>
    <string name="settings_newzys_from_date_key" translatable="false">from-date</string>
    <string name="settings_newzys_from_date_default" translatable="false">@string/empty_string</string>
    <string name="provide_optional_from_date">Provide optional From Date</string>

    <!-- Strings For Newzys To Retrieve Preference [CHAR LIMIT=30] -->
    <string name="settings_newzys_to_date_label">To Date: (optional)</string>
    <string name="settings_newzys_to_date_key" translatable="false">to-date</string>
    <string name="settings_newzys_to_date_default" translatable="false">@string/empty_string</string>
    <string name="provide_optional_to_date">Provide optional To Date</string>

    <!-- Strings For API Key Preference [CHAR LIMIT=30] -->
    <string name="settings_api_key_label">Guardian API Key:</string>
    <string name="settings_api_key_key" translatable="false">api-key</string>
    <string name="settings_api_key_default" translatable="false">@string/empty_string</string>
    <string name="provide_api_key">Provide Guardian API Key</string>
</resources>
