<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/choose_your_newzys">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_newzy"
                    android:icon="@drawable/ic_action_news"
                    android:title="@string/newzy" />
                <item
                    android:id="@+id/nav_books"
                    android:icon="@drawable/ic_action_book"
                    android:title="@string/books" />
                <item
                    android:id="@+id/nav_film"
                    android:icon="@drawable/ic_theaters"
                    android:title="@string/film" />
                <item
                    android:id="@+id/nav_music"
                    android:icon="@drawable/ic_action_music"
                    android:title="@string/music" />
                <item
                    android:id="@+id/nav_sport"
                    android:icon="@drawable/ic_action_ball"
                    android:title="@string/sport" />
                <item
                    android:id="@+id/nav_travel"
                    android:icon="@drawable/ic_action_plane"
                    android:title="@string/travel" />
            </group>
        </menu>
    </item>

    <group android:id="@+id/nav_admin">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>